infra/forgejo/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`forgejo.durp.info`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: forgejo
      port: 3000
      scheme: http
  tls:
    secretName: forgejo-tls
